@@ -12,7 +12,7 @@ Version 2.17
   3479, 5400, 6778, 6808, 9685, 11607, 13717, 13696, 13939, 14042, 14090,
   14166, 14150, 14151, 14154, 14157, 14166, 14173, 14195, 14252, 14283,
   14298, 14303, 14307, 14328, 14331, 14336, 14337, 14347, 14349, 14459,
-  14476, 14505, 14516, 14519
+  14476, 14505, 14516, 14519, 14532
 
 * Support for STT_GNU_IFUNC symbols added for s390 and s390x.
   Optimized versions of memcpy, memset, and memcmp added for System z10 and
